[package]
name = "vangers"
version = "0.1.0"
authors = ["kvark"]
edition = "2018"
default-run = "road"

[workspace]
members = [
    "lib/m3d",
    "lib/splay",
    "lib/tiff",
]

[profile.release]
debug = true

[lib]

[features]
default = []

[[bin]]
name = "road"
path = "bin/road/main.rs"

[[bin]]
name = "car"
path = "bin/car/main.rs"

[[bin]]
name = "model"
path = "bin/model/main.rs"

[[bin]]
name = "level"
path = "bin/level/main.rs"

[[bin]]
name = "convert"
path = "bin/convert/main.rs"

[dependencies]
# internals
m3d = { path = "lib/m3d" }
splay = { path = "lib/splay" }
tiff = { path = "lib/tiff" }
# library
bytemuck = "1.4"
byteorder = "1.4"
cgmath = { version = "0.18", features= [ "rand" ] }
futures = "0.3"
glsl-to-spirv = "0.1"
log = "0.4"
rand = "0.8"
rayon = "1.5"
ron = "0.6"
rust-ini = "0.16"
serde = "1.0.118"
serde_derive = "1.0.118"
serde_scan = "0.4"
wgpu = { git = "https://github.com/gfx-rs/wgpu-rs" }
#wgpu = { path = "../wgpu-rs" }
#wgpu = "0.4"
# binaries
env_logger = "0.8"
getopts = "0.2"
obj = "0.10"
png = "0.16"
winit = "0.24"

[patch.crates-io]
#gfx-hal = { version = "0.6", path = "../gfx/src/hal" }
#gfx-backend-empty = { version = "0.6", path = "../gfx/src/backend/empty" }
#gfx-backend-vulkan = { version = "0.6", path = "../gfx/src/backend/vulkan" }
#gfx-backend-dx12 = { version = "0.6", path = "../gfx/src/backend/dx12" }
#gfx-backend-dx11 = { version = "0.6", path = "../gfx/src/backend/dx11" }
#gfx-backend-metal = { version = "0.6", path = "../gfx/src/backend/metal" }
